# study_ros

./: .gitignore  .gitmodules
basics_01/: README.md
basics_01/dev_ws/src/my_interface/: CMakeLists.txt  package.xml
basics_01/dev_ws/src/my_package/: CMakeLists.txt  package.xml
basics_01/dev_ws/src/my_package/include/my_package/: first_node.hpp  second_node.hpp
basics_01/dev_ws/src/my_package/launch/: compositino.launch.py  my_launch.py
basics_01/dev_ws/src/my_package/src/: first_node.cpp  second_node.cpp
basics_02/: README.md
basics_02/dev_ws/src/my_package/: CMakeLists.txt  package.xml
basics_02/dev_ws/src/my_package/include/my_package/: listener.hpp  talker.hpp  visibility_control.h
basics_02/dev_ws/src/my_package/launch/: compositino.launch.py  two_nodes_launch.py
basics_02/dev_ws/src/my_package/src/: listener.cpp  manual_composition.cpp  talker.cpp
book_01/: README.md  py3.dockerfile  ros2.dockerfile
book_01/myProjects/: my_turtlesim.launch.py
book_01/myProjects/your_turtle_pkg/: package.xml  setup.cfg  setup.py
book_01/myProjects/your_turtle_pkg/your_turtle_pkg/: bg_paramTurtle.py  moveTurtle.py  mvTB3.py  rotateTurtle.py  spawnTurtle.py
book_02/: README  README.md
book_02/trial_ws/src/dummy_package/: package.xml  setup.cfg  setup.py
book_02/trial_ws/src/trial_interface/: CMakeLists.txt  package.xml
book_02/trial_ws/src/trial_interface/msg/: Valu.msg
book_02/trial_ws/src/trial_interface/srv/: XYZ.srv
book_02/trial_ws/src/trial_launch/: package.xml  setup.cfg  setup.py
book_02/trial_ws/src/trial_launch/launch/: trial_launch.launch.py
book_02/trial_ws/src/trial_launch_parameter/: package.xml  setup.cfg  setup.py
book_02/trial_ws/src/trial_launch_parameter/launch/: trial_launch_parameter.launch.py
book_02/trial_ws/src/trial_parameter/: package.xml  setup.cfg  setup.py
book_02/trial_ws/src/trial_parameter/trial_parameter/: trial_publisher_parameter.py
book_02/trial_ws/src/trial_service/: package.xml  setup.cfg  setup.py
book_02/trial_ws/src/trial_service/trial_service/: trial_client.py  trial_server.py
book_02/trial_ws/src/trial_topic/: package.xml  setup.cfg  setup.py
book_02/trial_ws/src/trial_topic/trial_topic/: trial_publisher.py  trial_subscriber.py
book_02/trial_ws/src/trial_topic_pi/: package.xml  setup.cfg  setup.py
book_02/trial_ws/src/trial_topic_pi/trial_topic_pi/: trial_publisher_pi.py  trial_subscriber_pi.py
book_03/: README.md
book_03/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
book_03/catkin_ws/devel/share/my_first_ros_pkg/cmake/: my_first_ros_pkgConfig.cmake
book_03/catkin_ws/src/my_first_ros_pkg/: CMakeLists.txt  package.xml
book_03/catkin_ws/src/my_first_ros_pkg/src/: hello_world_node.cpp
book_03/catkin_ws/src/ros_tutorials_action/: CMakeLists.txt  package.xml
book_03/catkin_ws/src/ros_tutorials_action/src/: action_client.cpp  action_server.cpp
book_03/catkin_ws/src/ros_tutorials_service/: CMakeLists.txt  package.xml
book_03/catkin_ws/src/ros_tutorials_service/src/: service_client.cpp  service_server.cpp
book_03/catkin_ws/src/ros_tutorials_topic/: CMakeLists.txt  package.xml
book_03/catkin_ws/src/ros_tutorials_topic/launch/: union.launch
book_03/catkin_ws/src/ros_tutorials_topic/src/: topic_publisher.cpp  topic_subscriber.cpp
pointcloud2/temp_ws/src/my_package/: CMakeLists.txt  package.xml
pointcloud2/temp_ws/src/my_package/launch/: pointcloud2.launch.py
pointcloud2/temp_ws/src/my_package/rviz/: pointcloud2_rviz.rviz
pointcloud2/temp_ws/src/my_package/src/: pointcloud2_talker.cpp
tutorial_01/: README.md
tutorial_01/dev_ws/src/action_tutorials_cpp/: CMakeLists.txt  package.xml
tutorial_01/dev_ws/src/action_tutorials_cpp/src/: fibonacci_action_client.cpp  fibonacci_action_server.cpp
tutorial_01/dev_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
tutorial_01/dev_ws/src/cpp_pubsub/launch/: cpp_launch.py
tutorial_01/dev_ws/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
tutorial_01/dev_ws/src/tutorial_interfaces/: CMakeLists.txt  package.xml
tutorial_tf/: README.md
tutorial_tf/dev_ws/src/learning_tf2_cpp/: CMakeLists.txt  package.xml
tutorial_tf/dev_ws/src/learning_tf2_cpp/launch/: start_tf2_debug_demo.launch.py  static_transform_publisher_launch.py  turtle_tf2_demo.launch.py  turtle_tf2_dynamic_frame_demo.launch.py  turtle_tf2_fixed_frame_demo.launch.py
tutorial_tf/dev_ws/src/learning_tf2_cpp/src/: dynamic_frame_tf2_broadcaster.cpp  fixed_frame_tf2_broadcaster.cpp  static_turtle_tf2_broadcaster.cpp  turtle_tf2_listener.cpp  turtle_tf2_listener_debug.cpp  turtle_tf2_message_filter.cpp
tutorial_urdf/: README.md
tutorial_urdf/dev_ws/src/urdf_tutorial_r2d2/: package.xml  setup.cfg  setup.py
